stylus/layouts/body.styl
/* Base dark theme
  mixin pulled from ./abstracts/_colors.styl */

body,
html,
:root {
    background-color #fafafa
    color fogra29
    font-smooth always
    -webkit-font-smoothing antialiased
    -moz-font-smoothing antialiased
    -o-font-smoothing antialiased
    -moz-osx-font-smoothing grayscale
}

* {
  box-sizing: border-box;
}

main {
  display flex
  flex-direction column
  justify-content center
  margin-left 0
  margin-right 0
  &:first-child {
    margin-top 0
  }
}

::-webkit-scrollbar {
  width 2px
  height 2px
}

::-webkit-scrollbar-track-piece {
  background-color transparent
}

::-webkit-scrollbar-thumb {
  background-color #656565
  outline 2px solid #fff
  outline-offset -2px
  border 0
}

::-scrollbar-thumb:hover {
    background-color: #909090
}

